update: change package version

--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "bd-autoload",
-  "version": "0.1.1",
+  "version": "2.0.0",
   "description": "bd autoload helper",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bdjs/bd-autoload.git"
@@ -21,12 +19,15 @@
     "url": "https://github.com/bdjs/bd-autoload/issues"
   },
   "homepage": "https://github.com/bdjs/bd-autoload#readme",
+  "engines": {
+    "node": ">= 8.0.0"
+  },
   "devDependencies": {
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1"
   }
 }
